--- a/css/about.css
+++ b/css/about.css
@@ -29,6 +29,7 @@ border-radius:0;
 #team_h{
 padding-top:40px;
 padding-bottom:40px;
+margin-bottom: 10rem;
 background:#f4f4f4;  
  }
 .team_h1ir ul li a{
