--- a/css/global.css
+++ b/css/global.css
@@ -193,7 +193,7 @@ position: fixed;
 left: auto;
 top: 0; 
 width:100%!important;
-background:#fff!important;
+background:rgb(124, 202, 233);
   }
 
 #header .navbar-brand{
@@ -211,7 +211,7 @@ margin-right:5px;
 #header{
 padding-top:10px;
 padding-bottom:9px;
-background:#fff;
+background:rgb(123, 218, 255);
  }
 #header .m_tag{
 padding-left:20px;
@@ -411,7 +411,8 @@ margin-top:20px;
 /*********************footer****************/
 #footer{
 padding-top:40px;
-padding-bottom:40px; 
+padding-bottom:40px;
+background-color:rgb(124, 202, 233) ; 
  }
 .footer_1i h5 i{
 padding-left:10px;
@@ -430,6 +431,12 @@ background:#C9A654;
 .space_left{
 padding-left:15px; 
 } 
+
+
+
+.navbar-brand {
+  margin-left: 2rem;
+}
 .space_right{
 padding-right:15px; 
 } 
@@ -481,13 +488,19 @@ position:static;
 border:none; 
  }
 #header .m_tag{
-font-size:28px!important;
+font-size:24px!important;
 border-bottom:1px solid #eee;
-padding-top:17px!important;
+padding-top:2px!important;
 padding-bottom:17px!important;
 margin-top:0;
 border-radius:0!important;
 border-right:none;
+ }
+
+ .effect-jazz img{
+  width: 28rem;
+  height: 30rem;
+  margin-left: -2rem;
  }
 .pages ul li{
 margin-bottom:5px; 
