--- a/css/index.css
+++ b/css/index.css
@@ -465,7 +465,8 @@ text-align:left;
  }
 .spec_1i{
 text-align:center;
-margin-top:10px; 
+margin-top: -18px;
+width: 40rem;
  }
 .spec_1ir {
 margin-top:10px;  
