--- a/css/global.css
+++ b/css/global.css
@@ -193,7 +193,7 @@ position: fixed;
 left: auto;
 top: 0; 
 width:100%!important;
-background:rgb(124, 202, 233);
+background:#fff;
   }
 
 #header .navbar-brand{
@@ -211,7 +211,7 @@ margin-right:5px;
 #header{
 padding-top:10px;
 padding-bottom:9px;
-background:rgb(123, 218, 255);
+background:#fff;
  }
 #header .m_tag{
 padding-left:20px;
@@ -425,6 +425,17 @@ color:#666;
 background:#C9A654; 
  }
 /*********************footer_end****************/
+@media (max-width:380px) 
+{
+  #header .navbar-brand {
+    font-size: 2.2rem;
+  }
+
+  #header .navbar-brand img {
+    max-height: 40px; /* Adjust the height to fit your design */
+}
+  
+}
 
 
 @media screen and (max-width : 767px){
