--- a/css/contact1.css
+++ b/css/contact1.css
@@ -92,7 +92,19 @@
         font-size: 14px;
     }
 
+    
+}
+
+/* @media (max-width:310px) {
     .contact-form {
-        width: 38rem;
+        width: 30rem;
     }
+    
+} */
+
+@media (min-width:750px) {
+    .contact-form {
+        width: 60rem;
+    }
+    
 }
